changes to make bird.js look better, css alignment changes to stop popout menu from covering text

--- a/birds_i_saw_client/public/style.css
+++ b/birds_i_saw_client/public/style.css
@@ -7,4 +7,5 @@
 
 body {
     background-color: wheat;
+    display: inline-table
 }
