--- a/birds_i_saw_client/src/components/Navbar.css
+++ b/birds_i_saw_client/src/components/Navbar.css
@@ -1,5 +1,5 @@
 .NavbarItems {
-    background: linear-gradient(90deg, rgb(110, 94, 254) 0%, rgba(73, 63, 252, 1) 100%);
+    background: linear-gradient(90deg, rgb(139,69,19) 0%, rgb(61,12,2) 100%);
     height: 80px;
     display: flex;
     justify-content: center;
@@ -21,6 +21,7 @@
 }
 
 .nav-menu {
+    background-color: linear-gradient (90deg, rgb(139,69,19) 0%, rgb(160,82,45) 100%);
     display: grid;
     grid-template-columns: repeat(5, auto);
     grid-gap: 10px;
@@ -40,7 +41,7 @@
 }
 
 .nav-links:hover {
-    background-color: #6d76f7;
+    background-color: rgb(160,82,45);
     border-radius: 4px;
     transition: all 0.2s ease-out;
 }
@@ -75,7 +76,7 @@ nav-links-mobile {
     }
 
     .nav-menu.active {
-        background: #6668f4;
+        background: rgb(160,82,45);
         left: 0;
         opacity: 1;
         transition: all 0.5s ease;
